--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.40.0",
+    "react-native-animatable": "^1.1.0",
     "react-native-audio": "git+https://github.com/jsierles/react-native-audio.git",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-fetch-blob": "^0.10.2-beta.6",
