--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,13 +126,13 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-tts')
     compile project(':react-native-audio')
     compile project(':react-native-fetch-blob')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-camera')
+    compile project(':VoiceModule')
 }
 
 // Run this once to be able to run the application with BUCK
