--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.40.0",
+    "react-native-android-voice": "^0.3.0",
     "react-native-animatable": "^1.1.0",
     "react-native-audio": "git+https://github.com/jsierles/react-native-audio.git",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-fetch-blob": "^0.10.2-beta.6",
-    "react-native-router-flux": "^3.37.0",
-    "react-native-tts": "^1.0.0"
+    "react-native-router-flux": "^3.37.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
