--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-audio": "git+https://github.com/jsierles/react-native-audio.git",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-fetch-blob": "^0.10.2-beta.6",
+    "react-native-pathjs-charts": "0.0.23",
     "react-native-router-flux": "^3.37.0",
     "react-native-tts": "^1.0.0"
   },
