--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native-fetch-blob": "^0.10.2-beta.6",
     "react-native-pathjs-charts": "0.0.23",
     "react-native-router-flux": "^3.37.0",
-    "react-native-tts": "^1.0.0"
+    "react-native-tts": "^1.0.0",
+    "react-native-vector-icons": "^4.0.1"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
