--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-fetch-blob": "^0.10.2-beta.6",
     "react-native-pathjs-charts": "0.0.23",
     "react-native-router-flux": "^3.37.0",
+    "react-native-scrollable-tab-view": "^0.6.5",
     "react-native-tts": "^1.0.0",
     "react-native-vector-icons": "^4.0.1"
   },
