--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-scrollable-tab-view": "^0.6.5",
     "react-native-tts": "^1.0.0",
     "react-native-vector-icons": "^4.0.1"
+    "firebase": "^3.8.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
