--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-native-router-flux": "^3.37.0",
     "react-native-scrollable-tab-view": "^0.6.5",
     "react-native-tts": "^1.0.0",
-    "react-native-vector-icons": "^4.0.1"
+    "react-native-vector-icons": "^4.0.1",
     "firebase": "^3.8.0"
   },
   "devDependencies": {
