--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "15.4.2",
-    "react-native": "0.40.0",
+    "firebase": "^3.8.0",
+    "native-base": "^2.1.2",
+    "react": "^16.0.0-alpha.3",
+    "react-native": "^0.43.0",
     "react-native-animatable": "^1.1.0",
     "react-native-audio": "git+https://github.com/jsierles/react-native-audio.git",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
@@ -18,8 +20,7 @@
     "react-native-router-flux": "^3.37.0",
     "react-native-scrollable-tab-view": "git+https://github.com/pyliaorachel/react-native-scrollable-tab-view.git",
     "react-native-tts": "^1.0.0",
-    "react-native-vector-icons": "^4.0.1",
-    "firebase": "^3.8.0"
+    "react-native-vector-icons": "^4.0.1"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
