--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^3.8.0",
+    "native-base": "2.0.13",
     "react": "15.4.2",
     "react-native": "0.40.0",
     "react-native-animatable": "^1.1.0",
     "react-native-audio": "git+https://github.com/jsierles/react-native-audio.git",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
+    "react-native-drawer": "^2.3.0",
     "react-native-fetch-blob": "^0.10.2-beta.6",
     "react-native-pathjs-charts": "0.0.27",
-    "react-native-router-flux": "^3.37.0",
+    "react-native-router-flux": "3.37.0",
+    "react-native-scrollable-tab-view": "git+https://github.com/pyliaorachel/react-native-scrollable-tab-view.git",
     "react-native-tts": "^1.0.0",
-    "react-native-vector-icons": "^4.0.1",
-    "firebase": "^3.8.0",
-    "react-native-scrollable-tab-view": "git+https://github.com/pyliaorachel/react-native-scrollable-tab-view.git"
-
+    "react-native-vector-icons": "^4.0.1"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
