--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-animatable": "^1.1.0",
     "react-native-audio": "git+https://github.com/jsierles/react-native-audio.git",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
+    "react-native-datepicker": "^1.4.7",
     "react-native-drawer": "^2.3.0",
     "react-native-fetch-blob": "^0.10.2-beta.6",
     "react-native-pathjs-charts": "0.0.27",
